--- a/gradle.properties
+++ b/gradle.properties
@@ -8,10 +8,11 @@ org.gradle.jvmargs=-Xmx1G
 	loader_version=0.11.3
 
 # Mod Properties
-	mod_version = 1.0.0
-	maven_group = com.example
-	archives_base_name = fabric-example-mod
+	mod_version=1.1.0
+	maven_group=johan809
+	archives_base_name=moreorigins
 
 # Dependencies
 	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api (or https://fabricmc.net/versions.html)
 	fabric_version=0.34.2+1.16
+	origins_version=0.7.1
