refactor: two origins deleted, RIP

--- a/src/main/resources/data/moreorigins/powers/launch_higher.json
+++ b/src/main/resources/data/moreorigins/powers/launch_higher.json
@@ -11,5 +11,5 @@
     "continuous": true
   },
   "name": "Wind Blessing",
-  "description": "You can launch yourself towards the sky, reaching a great altitude"
+  "description": "You can launch yourself towards the sky, reaching a great altitude."
 }
