--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,5 @@ org.gradle.jvmargs=-Xmx1G
 	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api (or https://fabricmc.net/versions.html)
 	fabric_version=0.34.2+1.16
 	origins_version=0.7.1
+	clothconfig_version=4.11.14
+	
